arreglado el diseño responsivo de detalles del empleado, margenes, y bug de visibilidad, modificado code company

--- a/src/app/pages/settings/my-company/department-management/department-management.component.scss
+++ b/src/app/pages/settings/my-company/department-management/department-management.component.scss
@@ -12,7 +12,7 @@
   color: #333;
 }
 
-.list-item > nb-icon{
+.list-item > nb-icon {
   margin-right: 10px;
 }
 
@@ -43,8 +43,4 @@
 
 button.full-width {
   width: 100%;
-}
-
-.button-group button {
-  margin-right: 8px;
 }
